--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -84,12 +84,15 @@
     <Compile Include="PageObject\ManageIncentivePrograms.cs" />
     <Compile Include="PageObject\NewProgram.cs" />
     <Compile Include="PageObject\SalesIncentiveTemplateBasic.cs" />
+    <Compile Include="PageObject\UserGroups\CreateNewGroup.cs" />
+    <Compile Include="PageObject\UserGroups\ManageUserGroups.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\AppConfigKeys.cs" />
     <Compile Include="Settings\ErrorMessage.cs" />
     <Compile Include="Settings\ObjectRepository.cs" />
     <Compile Include="TestCases\Module\IncentiveProgm\TestActivityIncentiveTemplate.cs" />
     <Compile Include="TestCases\Module\IncentiveProgm\TestSalesIncentiveTemplate.cs" />
+    <Compile Include="TestCases\Module\UserGroups\TestCreateNewGroup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
