--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -85,6 +85,7 @@
     <Compile Include="PageObject\NewProgram.cs" />
     <Compile Include="PageObject\SalesIncentiveTemplateBasic.cs" />
     <Compile Include="PageObject\UserGroups\CreateNewGroup.cs" />
+    <Compile Include="PageObject\UserGroups\GrpNameDetailPage.cs" />
     <Compile Include="PageObject\UserGroups\ManageUserGroups.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\AppConfigKeys.cs" />
@@ -99,13 +100,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="ExcelReader\" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="..\packages\WebDriver.ChromeDriver.win32.2.19.0.0\content\chromedriver.exe">
       <Link>chromedriver.exe</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ExcelReader\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
