Added the test case for creating the duplicate grp. Also fixed the test case for create new group

--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -94,6 +94,7 @@
     <Compile Include="TestCases\Module\IncentiveProgm\TestActivityIncentiveTemplate.cs" />
     <Compile Include="TestCases\Module\IncentiveProgm\TestSalesIncentiveTemplate.cs" />
     <Compile Include="TestCases\Module\UserGroups\TestCreateNewGroup.cs" />
+    <Compile Include="TestCases\Module\UserGroups\TestDuplicateGrp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
