Added the test cases for creating the grp of grp

--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -95,6 +95,7 @@
     <Compile Include="TestCases\Module\IncentiveProgm\TestSalesIncentiveTemplate.cs" />
     <Compile Include="TestCases\Module\UserGroups\TestCreateNewGroup.cs" />
     <Compile Include="TestCases\Module\UserGroups\TestDuplicateGrp.cs" />
+    <Compile Include="TestCases\Module\UserGroups\TestGroupofGroups.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
