Added the method for taking the screen shot and clicking on the link

--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -63,6 +63,7 @@
     <Compile Include="BaseClasses\BaseClass.cs" />
     <Compile Include="BaseClasses\InitializeWebDriver.cs" />
     <Compile Include="BaseClasses\PageBase.cs" />
+    <Compile Include="ComponentHelper\BrowserHelper.cs" />
     <Compile Include="ComponentHelper\CalenderHelper.cs" />
     <Compile Include="ComponentHelper\DropDownHelper.cs" />
     <Compile Include="ComponentHelper\GenericHelper.cs" />
