Added the partial class for the New Claim working hr: 4hr

--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -74,7 +74,8 @@
     <Compile Include="CustomException\NoSutiableDriverFound.cs" />
     <Compile Include="Interfaces\IConfig.cs" />
     <Compile Include="PageObject\ActivityIncentiveTemplate.cs" />
-    <Compile Include="PageObject\Claims\NewClaim.cs" />
+    <Compile Include="PageObject\Claims\NewClaimElements.cs" />
+    <Compile Include="PageObject\Claims\NewClaimMethods.cs" />
     <Compile Include="PageObject\HomePage.cs" />
     <Compile Include="PageObject\IncentivePage\BundleSetup.cs" />
     <Compile Include="PageObject\IncentivePage\ConfigureProgramPage.cs" />
