--- a/Park-and-Company/Properties/Settings.settings
+++ b/Park-and-Company/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="PartenrGrpGrid" Type="System.String" Scope="Application">
       <Value Profile="(Default)">//div[@id='PartnerGroupsGrid']</Value>
     </Setting>
+    <Setting Name="CustomAttGrid" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">//div[@id='CustomAttributeGrid']</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
