--- a/Park-and-Company/packages.config
+++ b/Park-and-Company/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Selenium.Support" version="2.48.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.48.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.IEDriver" version="2.48.0.0" targetFramework="net452" />
   <package id="WebDriver.ChromeDriver.win32" version="2.19.0.0" targetFramework="net452" />
 </packages>
