:cake: Working Hr : 2Hr Added the Check Out flow

--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -106,6 +106,8 @@
     <Compile Include="PageObject\SalesIncentiveTemplateBasic.cs" />
     <Compile Include="PageObject\Shop\CardStores.cs" />
     <Compile Include="PageObject\Shop\Category\OpenPrePaid\CardDetailPage.cs" />
+    <Compile Include="PageObject\Shop\Category\OpenPrePaid\HomeShippingAddress.cs" />
+    <Compile Include="PageObject\Shop\Category\OpenPrePaid\ReviewBasket.cs" />
     <Compile Include="PageObject\Shop\Category\OpenPrePaid\ViewItems.cs" />
     <Compile Include="PageObject\UserGroups\CreateNewGroup.cs" />
     <Compile Include="PageObject\UserGroups\GrpNameDetailPage.cs" />
