:+1: Working Hr : 1Hr Completed the Place order using reward points flow

--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -107,6 +107,7 @@
     <Compile Include="PageObject\Shop\CardStores.cs" />
     <Compile Include="PageObject\Shop\Category\OpenPrePaid\CardDetailPage.cs" />
     <Compile Include="PageObject\Shop\Category\OpenPrePaid\HomeShippingAddress.cs" />
+    <Compile Include="PageObject\Shop\Category\OpenPrePaid\OrderSummary.cs" />
     <Compile Include="PageObject\Shop\Category\OpenPrePaid\ReviewBasket.cs" />
     <Compile Include="PageObject\Shop\Category\OpenPrePaid\ViewItems.cs" />
     <Compile Include="PageObject\UserGroups\CreateNewGroup.cs" />
