--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Drawing" />
@@ -97,7 +101,7 @@
     <Compile Include="PageObject\IncentivePage\SelectProgramPage.cs" />
     <Compile Include="PageObject\IncentivePage\Validation.cs" />
     <Compile Include="PageObject\Learn\Library\LibraryDetailPage.cs" />
-    <Compile Include="PageObject\Learn\Library\LibrarySearchDetailPage.cs" />
+    <Compile Include="PageObject\Learn\Library\LibraryViewPage.cs" />
     <Compile Include="PageObject\LoginPage.cs" />
     <Compile Include="PageObject\ManageIncentivePrograms.cs" />
     <Compile Include="PageObject\NewProgram.cs" />
