--- a/Park-and-Company/packages.config
+++ b/Park-and-Company/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Selenium.Support" version="2.52.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.52.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.IEDriver" version="2.49.0.0" targetFramework="net452" />
