--- a/Park-and-Company/Park-and-Company.csproj
+++ b/Park-and-Company/Park-and-Company.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="WebDriver, Version=2.52.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selenium.WebDriver.2.52.0\lib\net40\WebDriver.dll</HintPath>
       <Private>True</Private>
@@ -80,6 +81,7 @@
     <Compile Include="Configuration\BrowserType.cs" />
     <Compile Include="CustomException\InvalidBrowserWindowIndex.cs" />
     <Compile Include="CustomException\NoSutiableDriverFound.cs" />
+    <Compile Include="ExtensionClass\LoggerExtClass\LoggerExtensionClass.cs" />
     <Compile Include="ExtensionClass\ScreenShotExtClass\TakeScreenShot.cs" />
     <Compile Include="ExtensionClass\WebElementExtClass\JavaScriptExecutor.cs" />
     <Compile Include="Interfaces\IConfig.cs" />
@@ -92,6 +94,12 @@
     <Compile Include="PageObject\Configuration\CustomeAttribute\CustomAttributes.cs" />
     <Compile Include="PageObject\Configuration\ManageRoles\ManageRoles.cs" />
     <Compile Include="PageObject\Configuration\ManageRoles\RolesDetails.cs" />
+    <Compile Include="PageObject\Configuration\StoreMaintenance\Catlog\ConfigurationSettings.cs" />
+    <Compile Include="PageObject\Configuration\StoreMaintenance\Catlog\GeneralInformation.cs" />
+    <Compile Include="PageObject\Configuration\StoreMaintenance\Catlog\StoreInventory.cs" />
+    <Compile Include="PageObject\Configuration\StoreMaintenance\Catlog\StoreMarkups.cs" />
+    <Compile Include="PageObject\Configuration\StoreMaintenance\Catlog\TabPanel.cs" />
+    <Compile Include="PageObject\Configuration\StoreMaintenance\StoreMaintenance.cs" />
     <Compile Include="PageObject\HomePage.cs" />
     <Compile Include="PageObject\IncentivePage\BundleSetup.cs" />
     <Compile Include="PageObject\IncentivePage\ConfigureProgramPage.cs" />
@@ -142,6 +150,7 @@
     <Compile Include="TestCases\CheckScreens\Module\Reports\TestReport.cs" />
     <Compile Include="TestCases\Learn\Library\TestManageLibrary.cs" />
     <Compile Include="TestCases\Module\Claims\TestClaims.cs" />
+    <Compile Include="TestCases\Module\Configuration\StoreMaintenece\TestStoreMaintenece.cs" />
     <Compile Include="TestCases\Module\IncentiveProgm\TestActivityIncentiveTemplate.cs" />
     <Compile Include="TestCases\Module\IncentiveProgm\TestSalesIncentiveTemplate.cs" />
     <Compile Include="TestCases\Module\ScreenShot\LoginPageScreenShot.cs" />
@@ -168,7 +177,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="..\packages\Selenium.WebDriver.IEDriver.2.49.0.0\driver\IEDriverServer.exe">
       <Link>IEDriverServer.exe</Link>
